# Bad_D_Compiler

./: README.md
files/: regression.d
flexVersion/: README.md
flexVersion/scripts/: compile.sh  runValgrind.sh  valgrind.sh
flexVersion/src/: CMakeLists.txt  main.c  program
flexVersion/src/DLang/: D_DEFINE_NON_RESERVED_WORDS.h  D_DEFINE_RESERVED_WORDS.h
flexVersion/src/errorManager/: errorManager.c  errorManager.h
flexVersion/src/lexicalAnalyzer/: lexicalAnalyzer.c  lexicalAnalyzer.h  lexicalHelper.c  lexicalHelper.h
flexVersion/src/lexicalAnalyzer/flex/: compileAndRun.sh  d.lex  lex.yy.c
flexVersion/src/readerSystem/: readerSystem.c
flexVersion/src/symbolTable/: symbolTable.c  symbolTable.h
noFlexVersion/src/: program
noFlexVersion/src/DLang/: d.ope
noFlexVersion/src/errorManager/: errorManager.h
noFlexVersion/src/lexicalAnalyzer/: lexicalAnalyzer.h  lexicalHelper.c  lexicalHelper.h
noFlexVersion/src/readerSystem/: readerSystem.h
noFlexVersion/src/utils/: bHashTable.h  operatorParser.c  operatorParser.h
scripts/: run.sh  valgrind.sh
src/: CMakeLists.txt  bdc  main.c  program  symbolTable.h~
src/DLang/: D_DEFINE.h  D_DEFINE_NON_RESERVED_WORDS.h
src/errorManager/: errorManager.c  errorManager.h
src/lexicalAnalyzer/: lexicalAnalyzer.c  lexicalAnalyzer.h  lexicalHelper.c  lexicalHelper.h
src/readerSystem/: readerSystem.c  readerSystem.h
src/symbolTable/: symbolTable.c  symbolTable.h
src/utils/: bHashTable.c  bHashTable.h  defineParser.c  defineParser.h  operatorParser.c  operatorParser.h
